data/derived/comb/progs/unify/prog2310.ml.out
Characters 80-84:
  if( (rand mod 2 ) = 0) then buildX()
       ^^^^
Error: This expression has type int * int -> 'a
       but an expression was expected of type int
